thay doi anh trang sale

--- a/sale.html
+++ b/sale.html
@@ -223,9 +223,45 @@
       <div class="sale-grid-container container">
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
+            <span class="sale-num">50% OFF</span>
+            <img src="./books/combo-sach-cong-nghe-ky-thuat-lap-trinh-C_C++.jpg" alt="" />
+            <a href="product_detail.html" class="book-title">COMBO sách lập trình C_C++</a>
+          </a>
+          <p class="book-author">Elizabeth Gilbert</p>
+          <div>
+            <a href="product_detail.html" class="current-price">99.000đ</a>
+            <p class="old-price">199.000đ</p>
+          </div>
+        </div>
+        <div class="product-item">
+          <a class="prod-img-title" href="product_detail.html">
+            <span class="sale-num">50% OFF</span>
+            <img src="./books/combo-sach-cong-nghe-thong-tin.jpg" alt=""/>
+            <a href="product_detail.html" class="book-title">COMBO sách công nghệ thông tin</a>
+          </a>
+          <p class="book-author">Elizabeth Gilbert</p>
+          <div>
+            <a href="product_detail.html" class="current-price">99.000đ</a>
+            <p class="old-price">199.000đ</p>
+          </div>
+        </div>
+        <div class="product-item">
+          <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img src="./books//big-magic_ElizabethGilbert_250.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <img src="./books/sach-cong-nghe-cloud.jpg" alt="" />
+            <a href="product_detail.html" class="book-title">Sách công nghệ điện toán đám mây</a>
+          </a>
+          <p class="book-author">Elizabeth Gilbert</p>
+          <div>
+            <a href="product_detail.html" class="current-price">125.000đ</a>
+            <p class="old-price">199.000đ</p>
+          </div>
+        </div>
+        <div class="product-item">
+          <a class="prod-img-title" href="product_detail.html">
+            <span class="sale-num">20% OFF</span>
+            <img src="./books/sach-cong-nghe-IOT.jpg" alt=""/>
+            <a href="product_detail.html" class="book-title">Sách công nghệ IOT</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -237,22 +273,10 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img
-              src="./books/gieo-suy-nghi-gat-thanh-cong_Napoleon Hill_116.jpg"
+              src="./books/sach-cong-nghe-mang.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Big magic</a>
-          </a>
-          <p class="book-author">Elizabeth Gilbert</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img src="./books/heaven_Mieko-Kawakami_269.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ mạng Internet</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -264,10 +288,10 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img
-              src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg"
+              src="./books/sach-cong-nghe-phan-mem.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ phần mềm</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -279,10 +303,10 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img
-              src="./books/ky-luat-ban-than_PegDawson-RichardGuare_125.jpg"
+              src="./books/sach-cong-nghe-phat-trien-ung-dung-di-dong.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ phát triển App</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -294,10 +318,10 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img
-              src="./books/lam-ra-lam-choi-ra-choi_Cal-Newport_120.jpg"
+              src="./books/sach-cong-nghe-thiet-ke-website.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ Web</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -308,11 +332,8 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/mot-cuoc-doi-dang-do-john-f-kennedy_Robert Dallek_329.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <img src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg" alt="" />
+            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin viễn thông</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -323,11 +344,8 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/nghe_thuat_dam_phan-Donald-Trump_300.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Big magic</a>
+            <img src="./books/sach-cong-nghe-thong-tin-trong-TMĐT.jpg" alt="" />
+            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin thương mại điện tử</a>
           </a>
           <p class="book-author">Elizabeth Gilbert</p>
           <div>
@@ -335,60 +353,7 @@
             <p class="old-price">199.000đ</p>
           </div>
         </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img src="./books/nghigiaulamgiau_Napoleon-Hill_110.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Big magic</a>
-          </a>
-          <p class="book-author">Elizabeth Gilbert</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img src="./books/nha-gia-kim_Paulo-Coelho_150.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Big magic</a>
-          </a>
-          <p class="book-author">Elizabeth Gilbert</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Big magic</a>
-          </a>
-          <p class="book-author">Elizabeth Gilbert</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Big magic</a>
-          </a>
-          <p class="book-author">Elizabeth Gilbert</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
+        
       </div>
     </div>
 
