thay doi tac gia sach

--- a/sale.html
+++ b/sale.html
@@ -227,7 +227,7 @@
             <img src="./books/combo-sach-cong-nghe-ky-thuat-lap-trinh-C_C++.jpg" alt="" />
             <a href="product_detail.html" class="book-title">COMBO sách lập trình C_C++</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">5TechUIT</p>
           <div>
             <a href="product_detail.html" class="current-price">99.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -239,7 +239,7 @@
             <img src="./books/combo-sach-cong-nghe-thong-tin.jpg" alt=""/>
             <a href="product_detail.html" class="book-title">COMBO sách công nghệ thông tin</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">5TechUIT</p>
           <div>
             <a href="product_detail.html" class="current-price">99.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -251,7 +251,7 @@
             <img src="./books/sach-cong-nghe-cloud.jpg" alt="" />
             <a href="product_detail.html" class="book-title">Sách công nghệ điện toán đám mây</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">Huỳnh Quyết Thắng</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -263,7 +263,7 @@
             <img src="./books/sach-cong-nghe-IOT.jpg" alt=""/>
             <a href="product_detail.html" class="book-title">Sách công nghệ IOT</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">Lê Trung Quân</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -278,7 +278,7 @@
             />
             <a href="product_detail.html" class="book-title">Sách công nghệ mạng Internet</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">TS.Phạm Huy Hoàng</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -293,7 +293,7 @@
             />
             <a href="product_detail.html" class="book-title">Sách công nghệ phần mềm</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">TS.Dương Hữu Thành</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -308,7 +308,7 @@
             />
             <a href="product_detail.html" class="book-title">Sách công nghệ phát triển App</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">UIT</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -323,7 +323,7 @@
             />
             <a href="product_detail.html" class="book-title">Sách công nghệ Web</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">UIT</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -335,7 +335,7 @@
             <img src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg" alt="" />
             <a href="product_detail.html" class="book-title">Sách công nghệ thông tin viễn thông</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">Dân Trí</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
@@ -347,7 +347,7 @@
             <img src="./books/sach-cong-nghe-thong-tin-trong-TMĐT.jpg" alt="" />
             <a href="product_detail.html" class="book-title">Sách công nghệ thông tin thương mại điện tử</a>
           </a>
-          <p class="book-author">Elizabeth Gilbert</p>
+          <p class="book-author">Nguyễn Đình Thuân</p>
           <div>
             <a href="product_detail.html" class="current-price">125.000đ</a>
             <p class="old-price">199.000đ</p>
