--- a/books.html
+++ b/books.html
@@ -507,135 +507,110 @@
           </div>
           <div class="product-item">
             <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">45% OFF</span>
-              <img
-                src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
-                alt=""
-              />
-              <a href="product_detail.html" class="book-title"
-                >Sapiens - Lược Sử Loài Người</a
-              >
+              <span class="sale-num">20% OFF</span>
+              <img src="./books/sach-cong-nghe-cloud.jpg" alt="" />
+              <a href="product_detail.html" class="book-title">Sách công nghệ điện toán đám mây</a>
             </a>
-            <p class="book-author">Yuval Noah Harari</p>
-            <div>
-              <a href="#" class="current-price">235.000đ</a>
-              <p class="old-price">299.000đ</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">50% OFF</span>
-              <img
-                src="./books/tet-o-lang-dia-nguc_thao-trang_115.jpg"
-                alt=""
-              />
-              <a href="product_detail.html" class="book-title"
-                >Tết Ở Làng Địa Ngục</a
-              >
-            </a>
-            <p class="book-author">Thảo Trang</p>
-            <div>
-              <a href="#" class="current-price">115.000đ</a>
-              <p class="old-price">230.000đ</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">40% OFF</span>
-              <img
-                src="./books/mot-cuoc-doi-dang-do-john-f-kennedy_Robert Dallek_329.jpg"
-                alt=""
-              />
-              <a href="product_detail.html" class="book-title"
-                >Một Cuộc Đời Đáng Nhớ</a
-              >
-            </a>
-            <p class="book-author">Elizabeth Gilbert</p>
-            <div>
-              <a href="#" class="current-price">329.000đ</a>
-              <p class="old-price">500.000đ</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">60% OFF</span>
-              <img src="./books/nghigiaulamgiau_Napoleon-Hill_110.jpg" alt="" />
-              <a href="product_detail.html" class="book-title"
-                >Nghĩ Giàu Làm giàu</a
-              >
-            </a>
-            <p class="book-author">Napoleon Hill</p>
-            <div>
-              <a href="#" class="current-price">125.000đ</a>
-              <p class="old-price">180.000đ</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">65% OFF</span>
-              <img
-                src="./books/lam-ra-lam-choi-ra-choi_Cal-Newport_120.jpg"
-                alt=""
-              />
-              <a href="product_detail.html" class="book-title"
-                >Làm Ra Làm, Chơi Ra Chơi</a
-              >
-            </a>
-            <p class="book-author">Cal Newport</p>
+            <p class="book-author">Huỳnh Quyết Thắng</p>
             <div>
               <a href="product_detail.html" class="current-price">125.000đ</a>
-              <p class="old-price">300.000đ</p>
+              <p class="old-price">199.000đ</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <a class="prod-img-title" href="product_detail.html">
+              <span class="sale-num">20% OFF</span>
+              <img src="./books/sach-cong-nghe-IOT.jpg" alt=""/>
+              <a href="product_detail.html" class="book-title">Sách công nghệ IOT</a>
+            </a>
+            <p class="book-author">Lê Trung Quân</p>
+            <div>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
             </div>
           </div>
           <div class="product-item">
             <a class="prod-img-title" href="product_detail.html">
               <span class="sale-num">20% OFF</span>
               <img
-                src="./books/mot-cuoc-doi-dang-do-john-f-kennedy_Robert Dallek_329.jpg"
+                src="./books/sach-cong-nghe-mang.jpg"
                 alt=""
               />
-              <a href="product_detail.html" class="book-title"
-                >Một Cuộc Đời Dang Dở</a
-              >
+              <a href="product_detail.html" class="book-title">Sách công nghệ mạng Internet</a>
             </a>
-            <p class="book-author">John F Kennedy</p>
+            <p class="book-author">TS.Phạm Huy Hoàng</p>
             <div>
-              <a href="product_detail.html" class="current-price">329.000đ</a>
-              <p class="old-price">380.000đ</p>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
             </div>
           </div>
           <div class="product-item">
             <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">25% OFF</span>
+              <span class="sale-num">20% OFF</span>
               <img
-                src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
+                src="./books/sach-cong-nghe-phan-mem.jpg"
                 alt=""
               />
-              <a href="product_detail.html" class="book-title"
-                >Tâm Lý Học Tội Phạm</a
-              >
+              <a href="product_detail.html" class="book-title">Sách công nghệ phần mềm</a>
             </a>
-            <p class="book-author">Thomas Harris</p>
+            <p class="book-author">TS.Dương Hữu Thành</p>
             <div>
-              <a href="product_detail.html" class="current-price">285.000đ</a>
-              <p class="old-price">350.000đ</p>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
             </div>
           </div>
           <div class="product-item">
             <a class="prod-img-title" href="product_detail.html">
-              <span class="sale-num">35% OFF</span>
+              <span class="sale-num">20% OFF</span>
               <img
-                src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg"
+                src="./books/sach-cong-nghe-phat-trien-ung-dung-di-dong.jpg"
                 alt=""
               />
-              <a href="product_detail.html" class="book-title"
-                >Kế Toán Vỉa Hè</a
-              >
+              <a href="product_detail.html" class="book-title">Sách công nghệ phát triển App</a>
             </a>
-            <p class="book-author">Darrell Mullis, Judith Orloff</p>
+            <p class="book-author">UIT</p>
             <div>
-              <a href="product_detail.html" class="current-price">179.000đ</a>
-              <p class="old-price">300.000đ</p>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <a class="prod-img-title" href="product_detail.html">
+              <span class="sale-num">20% OFF</span>
+              <img
+                src="./books/sach-cong-nghe-thiet-ke-website.jpg"
+                alt=""
+              />
+              <a href="product_detail.html" class="book-title">Sách công nghệ Web</a>
+            </a>
+            <p class="book-author">UIT</p>
+            <div>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <a class="prod-img-title" href="product_detail.html">
+              <span class="sale-num">20% OFF</span>
+              <img src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg" alt="" />
+              <a href="product_detail.html" class="book-title">Sách công nghệ thông tin viễn thông</a>
+            </a>
+            <p class="book-author">Dân Trí</p>
+            <div>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <a class="prod-img-title" href="product_detail.html">
+              <span class="sale-num">20% OFF</span>
+              <img src="./books/sach-cong-nghe-thong-tin-trong-TMĐT.jpg" alt="" />
+              <a href="product_detail.html" class="book-title">Sách công nghệ thông tin TMĐT</a>
+            </a>
+            <p class="book-author">Nguyễn Đình Thuân</p>
+            <div>
+              <a href="product_detail.html" class="current-price">125.000đ</a>
+              <p class="old-price">199.000đ</p>
             </div>
           </div>
           <div class="product-item">
