thay doi sach trong trang sach

--- a/sale.html
+++ b/sale.html
@@ -333,7 +333,7 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin viễn thông</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin DTVT</a>
           </a>
           <p class="book-author">Dân Trí</p>
           <div>
@@ -345,7 +345,7 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img src="./books/sach-cong-nghe-thong-tin-trong-TMĐT.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin thương mại điện tử</a>
+            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin TMDT</a>
           </a>
           <p class="book-author">Nguyễn Đình Thuân</p>
           <div>
