--- a/books2.html
+++ b/books2.html
@@ -143,9 +143,10 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
+          <li class="current-page"><a href=""> Sách 2 </a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
-          <li class="current-page"><a href=""> Bài viết </a></li>
+          <li class="current-page"><a href="news.html"> Bài viết </a></li>
           <li class="menu-item"><a href="recommended.html"> Đề xuất </a></li>
           <li class="menu-item"><a href="sale.html"> Sale </a></li>
         </ul>
@@ -154,9 +155,10 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
+          <li class="current-page"><a href=""> Sách 2</a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
-          <li class="current-page"><a href=""> Bài viết </a></li>
+          <li class="menu-item"><a href="news.html"> Bài viết </a></li>
           <li class="menu-item"><a href="recommended.html"> Đề xuất </a></li>
           <li class="menu-item"><a href="sale.html"> Sale </a></li>
         </ul>
@@ -187,9 +189,10 @@
         <ul class="list-group">
           <li class="list-group-item"><a href="index.html">Trang chủ</a></li>
           <li class="list-group-item"><a href="books.html">Sách</a></li>
+          <li class="list-group-item current-page"><a href="">Sách 2</a></li>
           <!-- <li class="list-group-item"><a href="magazine.html">Tạp chí</a></li>
                 <li class="list-group-item"><a href="textbooks.html">Sách giáo khoa</a></li> -->
-          <li class="list-group-item current-page"><a href="">Bài viết</a></li>
+          <li class="list-group-item"><a href="news.html">Bài viết</a></li>
           <li class="list-group-item">
             <a href="recommended.html">Đề xuất</a>
           </li>
