--- a/cart.html
+++ b/cart.html
@@ -139,6 +139,7 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
+          <li class="menu-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
           <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
@@ -150,6 +151,7 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
+          <li class="menu-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
           <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
@@ -183,6 +185,7 @@
         <ul class="list-group">
           <li class="list-group-item"><a href="index.html">Trang chủ</a></li>
           <li class="list-group-item"><a href="books.html">Sách</a></li>
+          <li class="list-group-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="list-group-item"><a href="magazine.html">Tạp chí</a></li>
                 <li class="list-group-item"><a href="textbooks.html">Sách giáo khoa</a></li> -->
           <li class="list-group-item"><a href="all_news.html">Bài viết</a></li>
