--- a/books.html
+++ b/books.html
@@ -142,6 +142,7 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="current-page"><a href=""> Sách </a></li>
+          <li class="menu-item"><a href="books2.html"> Sách 2 </a></li
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
           <li class="menu-item">
             <a href="textbooks.html"> Sách giáo khoa </a>
@@ -155,6 +156,7 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="current-page"><a href=""> Sách </a></li>
+          <li class="menu-item"><a href="books2.html"> Sách 2 </a></li
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
           <li class="menu-item">
             <a href="textbooks.html"> Sách giáo khoa </a>
@@ -190,6 +192,7 @@
         <ul class="list-group">
           <li class="list-group-item"><a href="index.html">Trang chủ</a></li>
           <li class="list-group-item current-page"><a href="books">Sách</a></li>
+          <li class="list-group-item"><a href="books2.html"> Sách 2</a></li
           <!-- <li class="list-group-item"><a href="magazine.html">Tạp chí</a></li>
           <li class="list-group-item">
             <a href="textbooks.html">Sách giáo khoa</a>
