update index, cart, books

--- a/cart.html
+++ b/cart.html
@@ -139,7 +139,6 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
-          <li class="menu-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
           <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
@@ -151,7 +150,6 @@
         <ul class="navbar">
           <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
           <li class="menu-item"><a href="books.html"> Sách </a></li>
-          <li class="menu-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
                 <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
           <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
@@ -185,7 +183,6 @@
         <ul class="list-group">
           <li class="list-group-item"><a href="index.html">Trang chủ</a></li>
           <li class="list-group-item"><a href="books.html">Sách</a></li>
-          <li class="list-group-item"><a href="books2.html"> Sách 2</a></li>
           <!-- <li class="list-group-item"><a href="magazine.html">Tạp chí</a></li>
                 <li class="list-group-item"><a href="textbooks.html">Sách giáo khoa</a></li> -->
           <li class="list-group-item"><a href="all_news.html">Bài viết</a></li>
@@ -218,12 +215,12 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
+              src="./books/gian-diep-mang-clifford-stoll.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Sapiens - Lược sử loài người</p>
-              <p class="cart-author-name">Yuval Noah Harari</p>
+              <p class="cart-book-name">Gián điệp mạng</p>
+              <p class="cart-author-name">Clifford Stoll</p>
               <p class="book-price-single">150.000đ</p>
             </div>
           </div>
@@ -255,13 +252,13 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/big-magic_ElizabethGilbert_250.jpg"
+              src="./books/lieu-it-da-het-thoi-nicholas-g.-carr.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Big Magic</p>
-              <p class="cart-author-name">Elizabeth Gilbert</p>
-              <p class="book-price-single">350.000đ</p>
+              <p class="cart-book-name">Liệu IT đã hết thời</p>
+              <p class="cart-author-name">Nicholas G Carr</p>
+              <p class="book-price-single">116.000đđ</p>
             </div>
           </div>
           <div class="col-3">
@@ -276,7 +273,7 @@
             </div>
           </div>
           <div class="cart-price-box col-2">
-            <p class="cart-item-price">350.000đ</p>
+            <p class="cart-item-price">116.000đ</p>
             <a href="javascript:void(0)" class="cart-delete-product"
               ><img src="./assets/trash_can.svg" alt=""
             /></a>
@@ -286,13 +283,13 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
+              src="./books/cong-nghiep-tuong-lai-alec-ross.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Tâm lý học tội phạm</p>
-              <p class="cart-author-name">Nguyễn Nhật Ánh</p>
-              <p class="book-price-single">299.000đ</p>
+              <p class="cart-book-name">Công nghiệp tương lai</p>
+              <p class="cart-author-name">Alec Ross</p>
+              <p class="book-price-single">90.000đ</p>
             </div>
           </div>
           <div class="col-3">
@@ -307,7 +304,7 @@
             </div>
           </div>
           <div class="cart-price-box col-2">
-            <p class="cart-item-price">299.000đ</p>
+            <p class="cart-item-price">90.000đ</p>
             <a href="javascript:void(0)" class="cart-delete-product"
               ><img src="./assets/trash_can.svg" alt=""
             /></a>
@@ -317,13 +314,13 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/nghe_thuat_dam_phan-Donald-Trump_300.jpg"
+              src="./books/computer-made-easy-james-bernstein.png"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">D. Trump - Nghệ thuật đàm phán</p>
-              <p class="cart-author-name">Donald J Trump, Tony Schartz</p>
-              <p class="book-price-single">99.000đ</p>
+              <p class="cart-book-name">Computers Made Easy</p>
+              <p class="cart-author-name">James Bernstein</p>
+              <p class="book-price-single">200.000đ</p>
             </div>
           </div>
           <div class="col-3">
@@ -338,7 +335,7 @@
             </div>
           </div>
           <div class="cart-price-box col-2">
-            <p class="cart-item-price">99.000đ</p>
+            <p class="cart-item-price">200.000đ</p>
             <a href="javascript:void(0)" class="cart-delete-product"
               ><img src="./assets/trash_can.svg" alt=""
             /></a>
@@ -384,25 +381,25 @@
           <div class="product-item">
             <a href="">
               <img
-                src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg"
+                src="./books/cuoc-chien-cong-nghe-so-charles-arthur.jpg"
                 alt=""
               />
-              <a href="" class="book-title">Big magic</a>
+              <a href="" class="book-title">Cuộc chiến công nghệ số</a>
             </a>
 
-            <p class="book-author">Elizabeth Gilbert</p>
+            <p class="book-author">Charles Arthur</p>
             <div>
-              <a href="#" class="current-price">125.000đ</a>
-              <p class="old-price">199.000đ</p>
+              <a href="#" class="current-price">109.000đ</a>
+              <p class="old-price">129.000đ</p>
             </div>
           </div>
           <div class="product-item">
             <a href="">
-              <img src="./books/nha-gia-kim_Paulo-Coelho_150.jpg" alt="" />
-              <a href="" class="book-title">Sapiens - Lược sử loài người</a>
+              <img src="./books/sach-cong-nghe-cloud.jpg" alt="" />
+              <a href="" class="book-title">Sách công nghệ điện toán đám mây</a>
             </a>
 
-            <p class="book-author">Elizabeth Gilbert</p>
+            <p class="book-author">Huỳnh Quyết Thắng</p>
             <div>
               <a href="#" class="current-price">125.000đ</a>
               <p class="old-price">199.000đ</p>
