--- a/cart.html
+++ b/cart.html
@@ -215,12 +215,12 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
+              src="./books/sach-cong-nghe-IOT.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Sapiens - Lược sử loài người</p>
-              <p class="cart-author-name">Yuval Noah Harari</p>
+              <p class="cart-book-name">Công nghệ Internet of Things và ứng dụng</p>
+              <p class="cart-author-name">Lê Trung Quân - Huỳnh Văn Đặng - Nguyễn Khánh Thuật</p>
               <p class="book-price-single">150.000đ</p>
             </div>
           </div>
@@ -252,12 +252,12 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/big-magic_ElizabethGilbert_250.jpg"
+              src="./books/lap-trinh-android-le-hoang-son.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Big Magic</p>
-              <p class="cart-author-name">Elizabeth Gilbert</p>
+              <p class="cart-book-name">Lập trình Android</p>
+              <p class="cart-author-name">Lê Hoàng Sơn</p>
               <p class="book-price-single">350.000đ</p>
             </div>
           </div>
@@ -283,12 +283,12 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
+              src="./books/lap-trinh-va-cuoc-song-jeff-atwood.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">Tâm lý học tội phạm</p>
-              <p class="cart-author-name">Nguyễn Nhật Ánh</p>
+              <p class="cart-book-name">Lập trình và cuộc sống</p>
+              <p class="cart-author-name">Jeff Atwood</p>
               <p class="book-price-single">299.000đ</p>
             </div>
           </div>
@@ -314,12 +314,12 @@
           <div class="cart-product-item col-7">
             <img
               class="cart-product-img"
-              src="./books/nghe_thuat_dam_phan-Donald-Trump_300.jpg"
+              src="./books/sach-cong-nghe-mang.jpg"
               alt=""
             />
             <div class="cart-book-info">
-              <p class="cart-book-name">D. Trump - Nghệ thuật đàm phán</p>
-              <p class="cart-author-name">Donald J Trump, Tony Schartz</p>
+              <p class="cart-book-name">Thiết kế mạng intranet</p>
+              <p class="cart-author-name">Phạm Huy Hoàng</p>
               <p class="book-price-single">99.000đ</p>
             </div>
           </div>
@@ -381,13 +381,13 @@
           <div class="product-item">
             <a href="">
               <img
-                src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg"
+                src="./books/cong-nghiep-tuong-lai-alec-ross.jpg"
                 alt=""
               />
-              <a href="" class="book-title">Big magic</a>
+              <a href="" class="book-title">Công nghiệp tương lai</a>
             </a>
 
-            <p class="book-author">Elizabeth Gilbert</p>
+            <p class="book-author">Alec Ross</p>
             <div>
               <a href="#" class="current-price">125.000đ</a>
               <p class="old-price">199.000đ</p>
@@ -395,11 +395,11 @@
           </div>
           <div class="product-item">
             <a href="">
-              <img src="./books/nha-gia-kim_Paulo-Coelho_150.jpg" alt="" />
-              <a href="" class="book-title">Sapiens - Lược sử loài người</a>
+              <img src="./books/gian-diep-mang-clifford-stoll.jpg" alt="" />
+              <a href="" class="book-title">Gián điệp mạng</a>
             </a>
 
-            <p class="book-author">Elizabeth Gilbert</p>
+            <p class="book-author">Clifford Stoll</p>
             <div>
               <a href="#" class="current-price">125.000đ</a>
               <p class="old-price">199.000đ</p>
@@ -408,13 +408,13 @@
           <div class="product-item hidden1">
             <a href="">
               <img
-                src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
+                src="./books/computer-made-easy-james-bernstein.png"
                 alt=""
               />
-              <a href="" class="book-title">Big magic</a>
+              <a href="" class="book-title">Computer made easy</a>
             </a>
 
-            <p class="book-author">Elizabeth Gilbert</p>
+            <p class="book-author">Jamese Bernstein</p>
             <div>
               <a href="#" class="current-price">125.000đ</a>
               <p class="old-price">199.000đ</p>
@@ -423,13 +423,13 @@
           <div class="product-item hidden2">
             <a href="">
               <img
-                src="./books/mot-cuoc-doi-dang-do-john-f-kennedy_Robert Dallek_329.jpg"
+                src="./books/lieu-it-da-het-thoi-nicholas-g.-carr.jpg"
                 alt=""
               />
-              <a href="" class="book-title">D. Trump - Nghệ thuật đàm phán</a>
+              <a href="" class="book-title">Liệu IT đã hết thời</a>
             </a>
 
-            <p class="book-author">Donald J Trump, Tony Schartz</p>
+            <p class="book-author">Nicholas G. Carr</p>
             <div>
               <a href="#" class="current-price">125.000đ</a>
               <p class="old-price">199.000đ</p>
