--- a/payment_success.html
+++ b/payment_success.html
@@ -238,12 +238,12 @@
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
+                src="./books/sach-cong-nghe-IOT.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Sapiens - Lược sử loài người</p>
-                <p class="ord-product-author">Yuval Noah Harari</p>
+                <p class="ord-product-name">Công nghệ Internet of Things và ứng dụng</p>
+                <p class="ord-product-author">Lê Trung Quân - Huỳnh Văn Đặng - Nguyễn Khánh Thuật</p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
@@ -256,12 +256,12 @@
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/big-magic_ElizabethGilbert_250.jpg"
+                src="./books/lap-trinh-android-le-hoang-son.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Big Magic</p>
-                <p class="ord-product-author">Elizabeth Gilbert</p>
+                <p class="ord-product-name">Lập trình Android</p>
+                <p class="ord-product-author">Lê Hoàng Sơn</p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
@@ -274,12 +274,12 @@
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
+                src="./books/lap-trinh-va-cuoc-song-jeff-atwood.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Tâm lý học tội phạm</p>
-                <p class="ord-product-author">Elizabeth Gilbert</p>
+                <p class="ord-product-name">Lập trình và cuộc sống</p>
+                <p class="ord-product-author">Jeff Atwood</p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
@@ -287,10 +287,28 @@
               <p class="ord-product-price">99.000đ</p>
             </div>
           </div>
+
+          <div class="ord-product">
+            <div class="ord-product-left">
+              <img
+                class="ord-product-img"
+                src="./books/sach-cong-nghe-mang.jpg"
+                alt=""
+              />
+              <div class="ord-product-info">
+                <p class="ord-product-name">Thiết kế mạng intranet</p>
+                <p class="ord-product-author">Phạm Huy Hoàng</p>
+                <p class="ord-product-quantity">Số lượng: 1</p>
+              </div>
+            </div>
+            <div>
+              <p class="ord-product-price">125.000đ</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <a href="/" class="success-to-home">Về trang chủ</a>
+      <a href="index.html" class="success-to-home">Về trang chủ</a>
     </div>
 
     <!-- Footer Section-->
